Improving error marking in tests and finishing execute 2-2 level

--- a/src/data/levels/003_CPU/006_Execute (1-2)/chat/es.yml
+++ b/src/data/levels/003_CPU/006_Execute (1-2)/chat/es.yml
@@ -3,9 +3,8 @@ main:
   messages:
   - vamos a implementar algunos opcodes de una forma muy <incorrecta> y temporal
   - solo por diversión ✨
-  - 📚  modifica tu código para que tu registro [PC] empiece en $8000 (donde está el código) en lugar de en 0
   - |-
-    e implementa este método en tu `CPU`:
+    📚  implementa este método en tu `CPU`:
     **step()**:
       __-> lee un byte de la ubicación de memoria apuntada por PC
         (llamémoslo <opcode>)
