--- a/src/data/levels/003_CPU/006_Execute (1-2)/chat/en.yml
+++ b/src/data/levels/003_CPU/006_Execute (1-2)/chat/en.yml
@@ -3,9 +3,8 @@ main:
   messages:
   - we'll implement some opcodes in a very <incorrect> and temporary way
   - just for fun ✨
-  - 📚  change your code so your [PC] register starts from $8000 (where the code is) instead of 0
   - |-
-    and implement this method in your `CPU`:
+    📚  implement this method in your `CPU`:
     **step()**:
       __-> reads a byte from the memory location that PC points at
         (let's call it <opcode>)
