--- a/src/data/levels/003_CPU/012_Instructions (3-5) - Checks/chat/es.yml
+++ b/src/data/levels/003_CPU/012_Instructions (3-5) - Checks/chat/es.yml
@@ -6,5 +6,5 @@ main:
   - no creo que necesites ayuda con estas
   - 📚  ¡implementa todas las instrucciones de verificaciones en tu objeto `instructions`!
   run-after-messages: |
-    store.dispatch.savedata.openFile("/docs/cpu_instructions.es.md");
+    store.dispatch.savedata.openFile("/docs/cpu/instructions.es.md");
   responses: []
