Adding Mapper 0 level

--- a/src/data/levels/003_CPU/002_Flags/chat/en.yml
+++ b/src/data/levels/003_CPU/002_Flags/chat/en.yml
@@ -27,6 +27,8 @@ what:
   - 📚  create a `FlagsRegister` class with 6 boolean properties (called ~c~, ~z~, ~i~, ~d~, ~v~ and ~n~)
   - initialize them with ```javascript false```
   - then, implement ```javascript getValue()``` and ```javascript setValue(value)``` following the previous table
+  - "`getValue()` should return an 8-bit number with all the flags" 
+  - "`setValue(...)` should assign all the flags from the received 8-bit number" 
   - i.e. with ~i~ and ~v~ on, ```javascript getValue()``` should return ```javascript 0b01100100```
   - and ```javascript setValue(0b00000010)``` should set all booleans to ```javascript false```, except for ~z~
   responses:
