--- a/src/data/levels/003_CPU/004_Memory/chat/en.yml
+++ b/src/data/levels/003_CPU/004_Memory/chat/en.yml
@@ -37,7 +37,7 @@ implement:
   - |-
     implement these two methods:
     **read(address)**:
-      __-> if <address> is in $0000-$07FF, returns the byte from <ram>
+      __-> if <address> is in $0000-$07FF, returns the corresponding byte from <ram>
       -> if <address> is in $0800-$1FFF, returns a mirrored byte from <ram>
         (e.g. $0802 becomes $0002, $1023 becomes $0023)
       -> otherwise, returns 0__
@@ -57,4 +57,12 @@ help:
   - |-
     for example, to calculate the 4th range's mirror, we would do:
     ```javascript (address - 0x2008) % 0x0008```
+  - |-
+    for example, let's look at the 4th range ("🚽  Mirrors of $2000-$2007")
+      range start => $2008
+      chunk we want to mirror => $2000-$2007
+      size of the chunk we want to mirror => $0008
+  - |-
+    then, we would do:
+      ```javascript (address - 0x2008) % 0x0008```
   responses: []
