--- a/src/data/levels/003_CPU/018_Execute (2-2)/chat/en.yml
+++ b/src/data/levels/003_CPU/018_Execute (2-2)/chat/en.yml
@@ -17,7 +17,7 @@ cycles:
   - so every opcode knows how many cycles it should take
   responses:
   - (*) why don't we want to build a "cycle-accurate" emulator? [accuracy]
-  - alright, what's The Right Way™️? [rightway]
+  - ✔️  alright, what's The Right Way™️? [rightway]
 
 accuracy:
   messages:
