--- a/src/data/levels/003_CPU/021_The golden log/chat/es.yml
+++ b/src/data/levels/003_CPU/021_The golden log/chat/es.yml
@@ -11,16 +11,19 @@ main:
   - fue creado por alguien llamado <kevtris>
   - ejecutaré tu emulador y registraré cada instrucción
   - comparando cada línea con un "golden log"
+  run-after-messages: |
+    store.dispatch.savedata.openFile("/roms/test/golden.log");
   responses:
   - ¿qué es un golden log? 🏆 [golden]
 
 golden:
   messages:
-  - un log hecho para el mismo ROM, pero creado por un emulador que se demostró que funciona correctamente
+  - un registro que documenta el resultado de correr esa misma ROM de pruebas, pero creado por un emulador que se demostró que funciona correctamente ✔️
+  - "tiene -en orden-: el [PC], el bytecode, el código ensamblador decompilado, el estado de todos los registros, y el contador de ciclos"
   - hasta ahora, solo he ejecutado pruebas básicas en tu código
   - esto abarcará todo tipo de casos extremos, verificando que tu CPU sea sólida
   - si encuentras discrepancias, tendrás que averiguar la causa o buscar ayuda en línea
-  - 📚  ¡usa los botones y llega al final del registro de oro!
+  - ¡usa el botón ⏩  y llega al final del golden log!
   run-after-messages: |
     set((m) => {
       m.$canRun = true;
