--- a/src/data/levels/003_CPU/015_Addressing modes (1-2)/chat/es.yml
+++ b/src/data/levels/003_CPU/015_Addressing modes (1-2)/chat/es.yml
@@ -20,21 +20,7 @@ explain:
   - (el argumento `address` en la función `run(...)` de tu instrucción `JMP`)
   - en este caso, la <salida> sería el resultado de realizar una lectura de 16 bits a la dirección $4080
   responses:
-  - no tan así, ¿qué es ese "page boundary bug"? 🐞 [pageboundary]
-
-pageboundary:
-  messages:
-  - básicamente, la unidad de hardware se lanzó con un fallo en el modo "Indirect"
-  - y si queremos emular el hardware precisamente... tenemos también que emular los bugs 😅
-  responses:
-  - (*) ¿no puedo simplemente arreglar el bug? [fix]
-  - ✔️  vamos a programar esto [letscode]
-
-fix:
-  messages:
-  - puedes, pero estarías rompiendo la compatibilidad con algunos juegos que dependen (ya sea accidentalmente o intencionalmente) de ese bug
-  responses:
-  - ...pageboundary
+  - ✔️  ok, programemos esto [letscode]
 
 letscode:
   messages:
@@ -61,6 +47,6 @@ relative:
 indirect:
   messages:
   - tienes una implementación completa en el archivo de documentación 😊
-  - es pseudocódigo, claro, pero vas a ser capaz de hacerlo funcionar
+  - ¡solo realiza un `read16` con la dirección!
   responses:
   - ...letscode
