Enabling music again

--- a/src/data/levels/003_CPU/022_Demo end/chat/en.yml
+++ b/src/data/levels/003_CPU/022_Demo end/chat/en.yml
@@ -8,7 +8,7 @@ main:
   - 👀  remember that you can use the feedback button to send me your comments
   - it took me a long time and effort to build this demo
   - remember that this is free software
-  - so, please, if you liked this, support me on Patreon
+  - so, please, if you liked this, support me on <insert crowdfunding site>
   - will you? 🥺 🥺
   responses:
   - sure! [sure]
