--- a/src/data/levels/003_CPU/022_Demo end/chat/es.yml
+++ b/src/data/levels/003_CPU/022_Demo end/chat/es.yml
@@ -8,7 +8,7 @@ main:
   - 👀  recuerda que puedes usar el botón de feedback para enviarme tus comentarios
   - me tomó mucho tiempo y esfuerzo construir esta demo
   - recuerda que esto es software libre
-  - así que, por favor, si te gustó esto, dame tu apoyo en Patreon
+  - así que, por favor, si te gustó esto, dame tu apoyo en <insert crowdfunding site>
   - ¿sí? 🥺 🥺
   responses:
   - ¡seguro! [sure]
